test_apps/test-typechecker/fail/test1.app
application test

section functions

globals {
  function f(i : Int) : Int {
    return i * "test";
  }
}
